fix(css): book list item text overflow

--- a/frontend/src/styles/components/common/books-list.module.css
+++ b/frontend/src/styles/components/common/books-list.module.css
@@ -22,6 +22,7 @@
   text-align: center;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-ease);
+  overflow: hidden;
 }
 
 .book_item:hover {
